# csv2geo-api

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  csv2geo-insomnia-collection.json  csv2geo-postman-collection.json  index.html  openapi.yaml  package-lock.json  package.json
.github/workflows/: tests.yml
docs/: index.html
examples/curl/: geocode.sh  reverse.sh
examples/go/: geocode.go
examples/nodejs/: geocode.js
examples/php/: geocode.php
examples/python/: geocode.py
scripts/: smoke-customer-api.sh
sdks/nodejs/: CHANGELOG.md  README.md  package.json
sdks/nodejs/src/: errors.js  index.d.ts  index.js
sdks/nodejs/test/: default-url.test.js  places-elevation.test.js  property-image.test.js  reverse-radius.test.js  routing.test.js  smoke-live.test.js  static-map-labels.test.js  static-map.test.js
sdks/python/: CHANGELOG.md  README.md  pyproject.toml
sdks/python/csv2geo/: __init__.py  client.py  exceptions.py  models.py
sdks/python/tests/: test_default_url.py  test_places_elevation.py  test_property_image.py  test_reverse_radius.py  test_routing.py  test_smoke_live.py  test_static_map.py  test_static_map_labels.py
